# Bataille_navale

Client/: CMakeLists.txt  clickablewidget.cpp  clickablewidget.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  placementwindow.cpp  placementwindow.h  spectatorwindow.cpp  spectatorwindow.h  spectatorwindow.ui  startwindow.cpp  startwindow.h  startwindow.ui
Server/: AiAgent.cpp  AiAgent.h  CMakeLists.txt  board.cpp  board.h  boat.cpp  boat.h  case.cpp  case.h  game.cpp  game.h  main.cpp  player.cpp  player.h  server.cpp  server.h
